testdata/baselines/reference/submodule/compiler/varianceAnnotationValidation.errors.txt
varianceAnnotationValidation.ts(5,22): error TS2636: Type 'Controller<???>' is not assignable to type 'Controller<???>' as implied by variance annotation.
  Types of property 'run' are incompatible.
    Type '(animal: ???) => void' is not assignable to type '(animal: ???) => void'. Two different types with this name exist, but they are unrelated.
      Types of parameters 'animal' and 'animal' are incompatible.
        Type '???' is not assignable to type '???'. Two different types with this name exist, but they are unrelated.
varianceAnnotationValidation.ts(27,1): error TS2322: Type 'AnimalContainer<Animal>' is not assignable to type 'AnimalContainer<Dog>'.
  Property 'bark' is missing in type 'Animal' but required in type 'Dog'.


==== varianceAnnotationValidation.ts (2 errors) ====
    // Repro from #49607
    
    // Variance annotation error expected
    
    interface Controller<out T> {
                         ~~~~~
!!! error TS2636: Type 'Controller<???>' is not assignable to type 'Controller<???>' as implied by variance annotation.
!!! error TS2636:   Types of property 'run' are incompatible.
!!! error TS2636:     Type '(animal: ???) => void' is not assignable to type '(animal: ???) => void'. Two different types with this name exist, but they are unrelated.
!!! error TS2636:       Types of parameters 'animal' and 'animal' are incompatible.
!!! error TS2636:         Type '???' is not assignable to type '???'. Two different types with this name exist, but they are unrelated.
    	createAnimal: () => T;
    	run: (animal: T) => void;
    }
    
    interface Animal {
    	run(): void;
    };
    
    class Dog implements Animal {
    	run() {};
    	bark() {};
    }
    
    interface AnimalContainer<T> {
    	controller: Controller<T>;
    }
    
    declare let ca: AnimalContainer<Animal>;
    declare let cd: AnimalContainer<Dog>;
    
    ca = cd;  // Ok
    cd = ca;  // Error
    ~~
!!! error TS2322: Type 'AnimalContainer<Animal>' is not assignable to type 'AnimalContainer<Dog>'.
!!! error TS2322:   Property 'bark' is missing in type 'Animal' but required in type 'Dog'.
!!! related TS2728 varianceAnnotationValidation.ts:16:2: 'bark' is declared here.
    